--- a/Opserver/Opserver.csproj
+++ b/Opserver/Opserver.csproj
@@ -247,7 +247,18 @@
     </Content>
     <Content Include="Config\JiraSettings.json.example" />
     <None Include="compilerconfig.json" />
+    <None Include="Config\DashboardSettings.json" />
+    <None Include="Config\ElasticSettings.json" />
+    <None Include="Config\ExceptionsSettings.json" />
+    <None Include="Config\HAProxySettings.json" />
+    <None Include="Config\JiraSettings.json" />
+    <None Include="Config\PagerDutySettings.json" />
     <None Include="Config\PagerDutySettings.json.example" />
+    <None Include="Config\PollingSettings.json" />
+    <None Include="Config\RedisSettings.json" />
+    <None Include="Config\SecuritySettings.config" />
+    <None Include="Config\SQLSettings.json" />
+    <None Include="Config\TeamCitySettings.json" />
     <None Include="Content\_Styles.HeadsUp.less">
       <DependentUpon>Styles.less</DependentUpon>
     </None>
